--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
   </nav>
 </header>
 
-<h2>Desde el pasado mes de Abril estoy entrenando en el Bootcamp de Full Stack developer en factoriaf5. Realmente me está resultando algo así como si intentase "meter el campo en una bota" debido a la cantidad de nueva información que llega en un breve espacio de tiempo.
+<h2 class="Intro">Desde el pasado mes de Abril estoy entrenando en el Bootcamp de Full Stack developer en factoriaf5. Realmente me está resultando algo así como si intentase "meter el campo en una bota" debido a la cantidad de nueva información que llega en un breve espacio de tiempo.
 ¡Todo un reto!! Estoy disfrutando de la experiencia por diversos motivos:</h2>
 
 <ul class="motivs">
